--- a/style/proland.css
+++ b/style/proland.css
@@ -17,17 +17,18 @@ body {
   position: relative;
 }
 
-nav-bar {
+.nav-bar {
   width: 100%;
   height: 38px;
   background-color: #fff;
   display: inline-block;
-  float: left;
+  float: right;
   margin: 0;
   padding: 0;
   top: 100%;
+  text-decoration: none;
 }
-  nav-bar a {
+  .nav-bar a {
     float: left;
     font-family: 'Lato', sans-serif;
     font-size: 9px;
@@ -36,15 +37,16 @@ nav-bar {
     padding-right: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
-    text-decoration: none;
     overflow: hidden;
     }
-     nav-bar a:hover {
+     .nav-bar a:hover {
       background-color: #17b0cf;
+      color: #000;
+      text-decoration: none;
      }
   }
 
-a {
+.a {
   color: #000;
   text-decoration: none;
 }
