--- a/style/proland.css
+++ b/style/proland.css
@@ -18,7 +18,7 @@ body {
   top: 100%;
 }
 
-nav {
+nav-bar {
   width: 100%;
   height: 38px;
   background-color: #fff;
@@ -29,7 +29,7 @@ nav {
   top: 100%;
   text-decoration: none;
 }
-  nav a {
+  nav-bar a {
     font-family: 'Lato', sans-serif;
     font-size: 9px;
     color: gray;
@@ -39,7 +39,7 @@ nav {
     padding-left: 10px;
     overflow: hidden;
     }
-    nav a:hover {
+    nav-bar a:hover {
       background-color: #17b0cf;
       text-decoration: none;
      }
