--- a/style/proland.css
+++ b/style/proland.css
@@ -13,9 +13,8 @@ body {
   font-family: 'Lato', sans-serif;
 }
 
-#header {
-  float: left;
-  top: 100%;
+#page-wrapper {
+  position: relative;
 }
 
 nav-bar {
