--- a/style/proland.css
+++ b/style/proland.css
@@ -9,7 +9,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: #eee;
   font-family: 'Lato', sans-serif;
 }
 
@@ -17,33 +17,14 @@ body {
   position: relative;
 }
 
-nav-bar {
-  width: 100%;
-  height: 38px;
-  background-color: #fff;
-  display: inline-block;
-  float: right;
-  margin: 0;
-  padding: 0;
-  top: 100%;
+li {
+  list-style: none;
+}
+
+a {
+  color: #000;
   text-decoration: none;
 }
-  nav-bar a {
-    font-family: 'Lato', sans-serif;
-    font-size: 9px;
-    color: gray;
-    padding-top: 20px;
-    padding-right: 10px;
-    padding-bottom: 10px;
-    padding-left: 10px;
-    overflow: hidden;
-    }
-    nav-bar a:hover {
-      background-color: #17b0cf;
-      text-decoration: none;
-     }
-  }
-
 
 /** global classes styling **/
 
@@ -141,7 +122,7 @@ nav {
 // hero
 
 #hero {
-  display: flex;
+  display: center;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -164,7 +145,7 @@ nav {
     width: 100%;
     height: 30px;
     margin: 15px 0;
-    border: 0;
+    border: 1;
     background-color: #f1c40f;
     
     &:hover {
